[package]
edition = "2018"
name = "api-iota-streams"
authors = ["iuslkae <iuslkae@protonmail.com>"]
license="UNLICENSED"
readme = "README.md"
version = "0.1.0"


[dependencies]
actix-web = {version = "4.0.0-beta.8"}
actix-web-validator = "2.1.1"
anyhow = "1.0.42"
futures = "0.3.16"
futures-util = "0.3.16"
rxrust = {git ="https://github.com/rxRust/rxRust"}
# paperclip = { version = "0.5", features = ["actix-nightly"] }
serde = { version = "1.0.126", features = ["derive"] }
iota-streams = { git = "https://github.com/iotaledger/streams", branch  = "v1.2.0"}
# iota-streams = {git = "https://github.com/iotaledger/streams", branch = "v1.1.0", features = ["async", "async-client"] }
serde_json = "1.0.64"
shaku = "0.6.1"
tokio = {version = "1.8.2", features = ["full"]}
validator = { version = "0.14", features = ["derive"] }
base64 = "0.13.0"
rand = "0.7.3"
dotenv = "0.15.0"
actix-cors = {version="0.6.0-beta.2"} 

